src/test/fun-test/semantic/DeclarationStrictConversion2.java.err
Semantic error: type mismatch - expected SHORT, got LONG, line 4, pos 21
