src/test/fun-test/semantic/DeclarationStrictConversion2.java
class Main {
    void main() {
        long foo = 0;
        short bar = foo;
    }
}